kubernetes/rr-fam/nzb/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nzb-svc
  namespace: rr-fam
  labels:
    name: nzb-svc
spec:
  type: ClusterIP
  selector:
    app: nzb
  ports:
    - port: 8080
      targetPort: 8080
